<resources>
<string name="app_name">App_MultiActivity</string>
<string name="sttitle">Notas do Estudante</string>
<string name="stname">Nome do Estudante</string>
<string name="stnota1">Nota 1 do Estudante</string>
<string name="stnota2">Nota 2 do Estudante</string>
<string name="stfreq">Frequencia do Estudante</string>
<string name="stsitu">Situação Final</string>
<string name="stmedia">Média Estudante</string>
<string name="stteste">teste</string>
</resources>
