<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/stsitu"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                />

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/estudante"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stname"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/stname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stmedia"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/stmedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stsitu"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/stsitu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>